# simple-rag

./: .gitignore  Dockerfile  Makefile  chat.py  config.py  config.yaml  main.py  pyproject.toml  requirements.txt
application/chat/: __init__.py  chat.py
application/rag/: __init__.py  embeddings.py
interfaces/log/: __init__.py  handler.py
interfaces/ollama/: __init__.py  llama.py
interfaces/pymupdf/: __init__.py  parser.py
log/: __init__.py  handler.py
rag/: __init__.py  embeddings.py
