[tool.poetry]
name = "simple-rag"
version = "0.1.0"
description = "Local RAG system leveraging Ollama."
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ollama = "^0.4.4"
pyyaml = "^6.0.2"
loguru = "^0.7.3"
pymupdf = "^1.25.1"
pymupdf4llm = "^0.0.17"
streamlit = "^1.41.1"
torch = "^2.5.1"
numpy = "^2.2.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
